[package]
name = "libisg"
version = "0.2.2"
edition = "2021"
rust-version = "1.60"  # by serde with derive
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/libisg"
description = "Libraly reading/writing ISG 2.0 format"
keywords = ["GIS", "ISG"]
readme = "README.md"
exclude = [".*", "rsc"]
categories = ["science::geo"]

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1" }
serde_test = { version = "1" }
